--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@forzoom/swiper",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -17,7 +17,7 @@
     "url": "https://github.com/Forzoom/swiper/issues"
   },
   "homepage": "https://github.com/Forzoom/swiper#readme",
-  "dependencies": {
+  "devDependencies": {
     "@forzoom/touch": "0.0.9",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
