--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@forzoom/swiper",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "",
-  "main": "index.js",
+  "main": "dist/swiper.min.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config ./build/webpack.config.prod.js"
