--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@forzoom/swiper",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "",
   "main": "dist/swiper.min.js",
   "scripts": {
@@ -23,6 +23,7 @@
     "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.4",
     "less": "^2.7.2",
